--- a/Personal Site/Pages/Primrose.cshtml
+++ b/Personal Site/Pages/Primrose.cshtml
@@ -24,22 +24,23 @@
     }
 }
 
-<section id="projects"
-         aria-label="projects">
-    <h2>Primrose</h2>
+<h1>Primrose</h1>
 
-    <p>
-        <a href="https://www.primrosevr.com/">Primrose</a> was the world's first JavaScript framework for developing WebXR applications, back when WebXR was still called "WebVR".
-        My first release of Primrose was sometime in 2014, almost a full year before Mozilla's A-Frame. I built Primrose with the
-        purpose of being able to create cross-platform, multiuser, live-editable VR environments. <a href="https://www.github.com/capnmidnight/Primrose/" aria-label="Primrose on git hub">View the Primrose GitHub repository</a>.
-    </p>
+<p>
+    <a href="https://www.primrosevr.com/">Primrose</a> was the world's first JavaScript framework for developing WebXR applications, back when WebXR was still called "WebVR".
+    My first release of Primrose was sometime in 2014, almost a full year before Mozilla's A-Frame. I built Primrose with the
+    purpose of being able to create cross-platform, multiuser, live-editable VR environments. <a href="https://www.github.com/capnmidnight/Primrose/" aria-label="Primrose on git hub">View the Primrose GitHub repository</a>.
+</p>
 
-    <img src="~/img/primrose.jpeg" alt="Screenshot from Primrose" title="Primrose Text Editor" />
+<figure>
+    <a href="https://primrosevr.com" target="_blank">
+        <img src="~/img/primrose.jpeg" alt="Screenshot from Primrose" title="Primrose Text Editor" />
+    </a>
+    <figcaption>The Primrose text editor</figcaption>
+</figure>
 
-    <p>
-        Today, I've moved the WebXR framework portions of Primrose to <a href="https://www.github.com/capnmidnight/Juniper">Juniper</a>.
-        Primrose is now just the syntax-highlighting text-editor that renders to an HTML5 Canvas element. Rendering to an HTML Canvas
-        element makes it useful for using as a texture in WebGL contexts.
-    </p>
-
-</section>
+<p>
+    Today, I've moved the WebXR framework portions of Primrose to <a href="https://www.github.com/capnmidnight/Juniper">Juniper</a>.
+    Primrose is now just the syntax-highlighting text-editor that renders to an HTML5 Canvas element. Rendering to an HTML Canvas
+    element makes it useful for using as a texture in WebGL contexts.
+</p>
