--- a/Personal Site/Pages/Turning.cshtml
+++ b/Personal Site/Pages/Turning.cshtml
@@ -25,73 +25,79 @@
 }
 
 
-<section id="projects"
-         aria-label="projects">
-    <h2>Word Turning</h2>
+<h1>Word Turning</h1>
 
-    <p>
-        Beginning early in January 2023, I started teaching myself the craft of woodturning.
-        I am specifically focusing on what's called "treenware", i.e. eating utensils made from wood (as opposed to "silverware").
-    </p>
+<p>
+    Beginning early in January 2023, I started teaching myself the craft of woodturning.
+    I am specifically focusing on what's called "treenware", i.e. eating utensils made from wood (as opposed to "silverware").
+</p>
 
-    <p>Here are a few of the things I've made so far.</p>
+<p>Here are a few of the things I've made so far.</p>
 
+<section>
+    <h2>My first shotglass</h2>
     <figure>
-        <h3>My first shotglass</h3>
-        <img src="/turning/A1.jpg" alt="Photo of wood working project" title="My first shotglass">
+        <a href="/turning/A1.jpg" target="_blank">
+            <img src="/turning/A1.jpg" alt="Photo of wood working project" title="My first shotglass">
+        </a>
         <figcaption>A shotglass. The first usable piece of treenware I've ever made. This is pine stained with black ink.</figcaption>
-        <a href="#"></a>
     </figure>
 
     <figure>
-        <h3></h3>
-        <img src="/turning/A2.jpg" alt="Photo of wood working project" title="My first shotglass">
+        <a href="/turning/A2.jpg" target="_blank">
+            <img src="/turning/A2.jpg" alt="Photo of wood working project" title="My first shotglass">
+        </a>
         <figcaption>Another angle on the wooden shotglass.</figcaption>
-        <a href="#"></a>
     </figure>
+</section>
 
-
+<section>
+    <h2>My first goblet</h2>
     <figure>
-        <h3>My first goblet</h3>
-        <img src="/turning/B1.jpg" alt="Photo of wood working project" title="My first goblet">
+        <a href="/turning/B1.jpg" target="_blank">
+            <img src="/turning/B1.jpg" alt="Photo of wood working project" title="My first goblet">
+        </a>
         <figcaption>A goblet. This is tupelo, unstained. I found out after the fact that tupelo is not ideal for wood turning, as its softness makes it very prone to end-grain tearout.</figcaption>
-        <a href="#"></a>
     </figure>
+</section>
 
-    
+<section>
+    <h2>My first bowl</h2>
     <figure>
-        <h3>My first bowl</h3>
-        <img src="/turning/C1.jpg" alt="Photo of wood working project" title="My first bowl">
+        <a href="/turning/C1.jpg" target="_blank">
+            <img src="/turning/C1.jpg" alt="Photo of wood working project" title="My first bowl">
+        </a>
         <figcaption>A snack bowl. This is pine, stained with a red ink. Not pictured here is the attempt I made at sealing the wood with epoxy resin, which ended poorly as I didn't use enough epoxy.</figcaption>
-        <a href="#"></a>
     </figure>
+</section>
 
-    
+<section>
+    <h2>My second goblet</h2>
     <figure>
-        <h3>My second goblet</h3>
-        <img src="/turning/D1.jpg" alt="Photo of wood working project" title="My second goblet">
+        <a href="/turning/D1.jpg" target="_blank">
+            <img src="/turning/D1.jpg" alt="Photo of wood working project" title="My second goblet">
+        </a>
         <figcaption>Another goblet. This is maple and rosewood. As-yet unfinished.</figcaption>
-        <a href="#"></a>
     </figure>
 
     <figure>
-        <h3></h3>
-        <img src="/turning/D2.jpg" alt="Photo of wood working project" title="My second goblet">
+        <a href="/turning/D2.jpg" target="_blank">
+            <img src="/turning/D2.jpg" alt="Photo of wood working project" title="My second goblet">
+        </a>
         <figcaption>To make the pattern in the bowl of the goblet, I clad a maple post with other maple as well as rosewood. The goop on the top is epoxy resin that I dammed up with hot glue to try to fill in the glue gaps created by my janky sawing skills.</figcaption>
-        <a href="#"></a>
     </figure>
 
     <figure>
-        <h3></h3>
-        <img src="/turning/D3.jpg" alt="Photo of wood working project" title="My second goblet">
+        <a href="/turning/D3.jpg" target="_blank">
+            <img src="/turning/D3.jpg" alt="Photo of wood working project" title="My second goblet">
+        </a>
         <figcaption>Detail on the bowl.</figcaption>
-        <a href="#"></a>
     </figure>
 
     <figure>
-        <h3></h3>
-        <img src="/turning/D4.jpg" alt="Photo of wood working project" title="My second goblet">
+        <a href="/turning/D4.jpg" target="_blank">
+            <img src="/turning/D4.jpg" alt="Photo of wood working project" title="My second goblet">
+        </a>
         <figcaption>Detail on the pedestal.</figcaption>
-        <a href="#"></a>
     </figure>
 </section>
