new wood turning project

--- a/Personal Site/Pages/Turning.cshtml
+++ b/Personal Site/Pages/Turning.cshtml
@@ -101,3 +101,27 @@
         <figcaption>Detail on the pedestal.</figcaption>
     </figure>
 </section>
+
+<section>
+    <h2>My third goblet</h2>
+    <figure>
+        <a href="/turning/E1.jpg" target="_blank">
+            <img src="/turning/E1.jpg" alt="Photo of wood working project" title="My third goblet">
+        </a>
+        <figcaption>Yet another goblet. Again, maple and rosewood. Finished with a beeswax/linseed oil paste. Managed to get the proportions right this time. I didn't try to do a segmented pattern this time. Just stuck with straight rosewood for the bowl and foot. I think it looks a lot better.</figcaption>
+    </figure>
+
+    <figure>
+        <a href="/turning/E2.jpg" target="_blank">
+            <img src="/turning/E2.jpg" alt="Photo of wood working project" title="My third goblet">
+        </a>
+        <figcaption>Detail on the bowl interior.</figcaption>
+    </figure>
+
+    <figure>
+        <a href="/turning/E3.jpg" target="_blank">
+            <img src="/turning/E3.jpg" alt="Photo of wood working project" title="My third goblet">
+        </a>
+        <figcaption>Detail on the bowl exterior.</figcaption>
+    </figure>
+</section>
