--- a/Personal Site/Pages/Index.cshtml
+++ b/Personal Site/Pages/Index.cshtml
@@ -104,7 +104,7 @@
         ("AI Chat Bot", "AI Chat Bot", "A speech-based conversation with AI", "/apps/ai-chat-bot", "/img/ai-chat-bot.jpeg",
             @"The AI Chat Bot uses Speech-to-Text technology and some clever prompting of an OpenAI LLM to generate characterized responses,
             which are then piped out to a Text-to-Speech engine, with lip-sync."),
-        ("Woodturning", "Woodturning", "Wood working on a lathe", "/turning", "/img/turning.jpg", 
+        ("Woodturning", "Woodturning", "Wood working on a lathe", "/turning", "/turning/cover.jpg", 
             @"Some pictures of wooden cups and bowls I've made with my woodturning lathe."),
         ("Primrose", "Primrose", "Primrose text editor", "/primrose", "/img/primrose.jpeg",
             @"Primrose was the world's first JavaScript framework for developing WebXR applications, back when WebXR was still called ""WebVR"".
