--- a/Personal Site/Pages/Index.cshtml
+++ b/Personal Site/Pages/Index.cshtml
@@ -106,6 +106,9 @@
             which are then piped out to a Text-to-Speech engine, with lip-sync."),
         ("Woodturning", "Woodturning", "Wood working on a lathe", "/turning", "/turning/cover.jpg", 
             @"Some pictures of wooden cups and bowls I've made with my woodturning lathe."),
+        ("Calla", "Calla", "Spatialized audio chat", "https://github.com/capnmidnight/Calla", "https://raw.githubusercontent.com/capnmidnight/Calla/master/repo-preview.jpg",
+            @"Calla was a fun experiment in audio-only teleconferencing. The 2D game world provided a space for ""Spatialized Audio Chat"" to give users a 
+            natural way to have sidebar conversations and congregate in the space. Much of the audio graph manipulation code ended up in Juniper."),
         ("Primrose", "Primrose", "Primrose text editor", "/primrose", "/img/primrose.jpeg",
             @"Primrose was the world's first JavaScript framework for developing WebXR applications, back when WebXR was still called ""WebVR"".
             My first release of Primrose was sometime in 2014, almost a full year before Mozilla's A-Frame.")
