--- a/Personal Site/Pages/Turning.cshtml
+++ b/Personal Site/Pages/Turning.cshtml
@@ -125,3 +125,13 @@
         <figcaption>Detail on the bowl exterior.</figcaption>
     </figure>
 </section>
+
+<section>
+    <h2>My fourth goblet</h2>
+    <figure>
+        <a href="/turning/F1.jpg" target="_blank">
+            <img src="/turning/F1.jpg" alt="Photo of wood working project" title="My fourth goblet">
+        </a>
+        <figcaption>Yet another goblet. This one was made from a solid block of marblewood. Finished with a beeswax/linseed oil paste. I intended to make a stem for this one, but my lathe mounting shattered and I had to sacrifice wood from what would have been the stem to make a new one.</figcaption>
+    </figure>
+</section>
