--- a/Personal Site/Pages/Index.cshtml
+++ b/Personal Site/Pages/Index.cshtml
@@ -68,7 +68,7 @@
     <h2>Bio</h2>
 
     <p>
-        I'm a cross-disciplinary Product Manager/Project Manager/Technical Lead, with 20 years of professional experience. I've successfully
+        I'm a cross-disciplinary Project Manager/Product Developer/Technical Lead, with 20 years of professional experience. I've successfully
         bootstrapped and deployed multiple <abbr>VR</abbr> and <abbr>AR</abbr> projects in WebXR and Unity3D over 
         the last 8 years. 
     </p>
@@ -99,19 +99,19 @@
         ("DLS VR", "Diplomatic Language Services Virtual Reality", "DLS VR Landing Page", "/dlsvr", "/img/dlsvr/screen1.jpeg",
             @"DLS VR is a multiuser, multimodal, Web-based VR application that includes a full, online editor, designed for
             subject matter experts to be able to rapidly create new immersion scenarios."),
-        ("Juniper", "Juniper", "A forest demo built with Juniper", "/juniper", "/img/juniper.jpeg",
-            @"Juniper is an .NET 7 and TypeScript framework for building WebXR applications. It is an evolution of my previous project, Primrose."),
         ("AI Chat Bot", "AI Chat Bot", "A speech-based conversation with AI", "/apps/ai-chat-bot", "/img/ai-chat-bot.jpeg",
             @"The AI Chat Bot uses Speech-to-Text technology and some clever prompting of an OpenAI LLM to generate characterized responses,
             which are then piped out to a Text-to-Speech engine, with lip-sync."),
-        ("Woodturning", "Woodturning", "Wood working on a lathe", "/turning", "/turning/cover.jpg", 
-            @"Some pictures of wooden cups and bowls I've made with my woodturning lathe."),
+        ("Juniper", "Juniper", "A forest demo built with Juniper", "/juniper", "/img/juniper.jpeg",
+            @"Juniper is an .NET 7 and TypeScript framework for building WebXR applications. It is an evolution of my previous project, Primrose."),
         ("Calla", "Calla", "Spatialized audio chat", "https://github.com/capnmidnight/Calla", "https://raw.githubusercontent.com/capnmidnight/Calla/master/repo-preview.jpg",
             @"Calla was a fun experiment in audio-only teleconferencing. The 2D game world provided a space for ""Spatialized Audio Chat"" to give users a 
             natural way to have sidebar conversations and congregate in the space. Much of the audio graph manipulation code ended up in Juniper."),
         ("Primrose", "Primrose", "Primrose text editor", "/primrose", "/img/primrose.jpeg",
             @"Primrose was the world's first JavaScript framework for developing WebXR applications, back when WebXR was still called ""WebVR"".
-            My first release of Primrose was sometime in 2014, almost a full year before Mozilla's A-Frame.")
+            My first release of Primrose was sometime in 2014, almost a full year before Mozilla's A-Frame."),
+        ("Woodturning", "Woodturning", "Wood working on a lathe", "/turning", "/turning/cover.jpg", 
+            @"Some pictures of wooden cups and bowls I've made with my woodturning lathe.")
      })
     {
         <figure>
