--- a/TypeScript Code/src/apps/ai-chat-bot/index.css
+++ b/TypeScript Code/src/apps/ai-chat-bot/index.css
@@ -1,13 +1,26 @@
-﻿main {
+﻿*:has(> dl.properties) {
+    container-type: inline-size;
+}
+
+@container (max-width: 560px) {
+    dl.properties {
+        grid-template-columns: 1fr;
+    }
+
+        dl.properties > dt {
+            text-align: left;
+        }
+}
+
+main {
     padding: 3em 1em;
-    display: grid;
-    grid-template-rows: auto 1fr;
     height: 100%;
 }
 
 #aiForm {
     display: grid;
-    grid-template-rows: auto auto 1fr;
+    grid-template-rows: auto auto auto auto 1fr;
+    height: 100%;
 }
 
     #aiForm > .controls {
@@ -16,6 +29,25 @@
         justify-content: center;
         column-gap: 5px;
     }
+
+.tab-panel > .panels {
+    padding-bottom: 2em;
+}
+
+.tab-panel > .panels::after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    background: linear-gradient(transparent 75%, var(--main-bg-color));
+    pointer-events: none;
+}
+
+#status {
+    text-align: center;
+}
 
 .controls > .btn {
     border-radius: 5px;
@@ -32,10 +64,6 @@
         margin: 0;
         box-shadow: var(--box-shadow-color) 0 0 2px;
     }
-
-#status {
-    text-align: center;
-}
 
 #addlPrompt {
     font-family: monospace;
