--- a/Personal Site/Pages/Turning.cshtml
+++ b/Personal Site/Pages/Turning.cshtml
@@ -135,3 +135,13 @@
         <figcaption>Yet another goblet. This one was made from a solid block of marblewood. Finished with a beeswax/linseed oil paste. I intended to make a stem for this one, but my lathe mounting shattered and I had to sacrifice wood from what would have been the stem to make a new one.</figcaption>
     </figure>
 </section>
+
+<section>
+    <h2>A claret cup</h2>
+    <figure>
+        <a href="/turning/G1.jpg" target="_blank">
+            <img src="/turning/G1.jpg" alt="Photo of wood working project" title="A claret cup">
+        </a>
+        <figcaption>This is a kind of small wineglass, usually used for desert wines. As I was turning, I discovered a large whole in the middle of the wood. I tried mixing some iridescent ink with epoxy to fill it. While the shininess of the ink didn't come through too well, the overall piece is quite pleasing. I'm getting better at these. This one only took me about an hour.</figcaption>
+    </figure>
+</section>
