--- a/MauiApp1/Views/AboutPage.xaml
+++ b/MauiApp1/Views/AboutPage.xaml
@@ -11,7 +11,7 @@
     
     <VerticalStackLayout Spacing="10" Margin="10">
         <HorizontalStackLayout Spacing="10">
-            <Image Source="dotnet_bot.svg"
+            <Image Source="dotnet_bot.png"
                    SemanticProperties.Description="The dot net bot waving hello!"
                    HeightRequest="64" />
             <Label FontSize="22" FontAttributes="Bold" Text="{Binding Title}" VerticalOptions="End" />
