--- a/MauiApp1/Views/NotePage.xaml
+++ b/MauiApp1/Views/NotePage.xaml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:viewModels="clr-namespace:MauiApp1.ViewModels"
              x:Class="MauiApp1.Views.NotePage"
              Title="Notes">
+    <ContentPage.BindingContext>
+        <viewModels:NoteViewModel/>
+    </ContentPage.BindingContext>
+    
     <VerticalStackLayout>
         <Editor x:Name="TextEditor"
                 Placeholder="Enter your note"
@@ -10,13 +15,13 @@
                 HeightRequest="100" />
         <Grid ColumnDefinitions="*,*,*" ColumnSpacing="4">
             <Button Text="Save"
-                    Clicked="SaveButton_Clicked" />
+                    Command="{Binding SaveCommand}" />
             <Button Grid.Column="1"
                     Text="Delete"
-                    Clicked="DeleteButton_Clicked" />
+                    Command="{Binding DeleteCommand}" />
             <Button Grid.Column="2"
                     Text="Cancel"
-                    Clicked="CancelButton_Clicked"/>
+                    Command="{Binding CancelCommand}"/>
         </Grid>
     </VerticalStackLayout>
 </ContentPage>
