--- a/MauiApp1/Views/AboutPage.xaml
+++ b/MauiApp1/Views/AboutPage.xaml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:models="clr-namespace:MauiApp1.Models"
+             xmlns:viewModels="clr-namespace:MauiApp1.ViewModels"
              x:Class="MauiApp1.Views.AboutPage"
              Title="About Notes">
-    
+
     <ContentPage.BindingContext>
-        <models:About/>
+        <viewModels:AboutViewModel/>
     </ContentPage.BindingContext>
-    
+
     <VerticalStackLayout Spacing="10" Margin="10">
         <HorizontalStackLayout Spacing="10">
             <Image Source="dotnet_bot.png"
@@ -19,6 +19,6 @@
         </HorizontalStackLayout>
 
         <Label Text="{Binding Message}" />
-        <Button Text="Learn more..." Clicked="LearnMore_Clicked" />
+        <Button Text="Learn more..." Command="{Binding ShowMoreInfoCommand}" />
     </VerticalStackLayout>
 </ContentPage>
